Separacion del index.html y del js

--- a/cap-01/src/index.html
+++ b/cap-01/src/index.html
@@ -7,10 +7,7 @@
         <p id="mensaje">Hola, mundo!</p>
         <button onclick="cambiarTexto()">Haz clic</button>
 
-        <script>
-            function cambiarTexto() {
-                document.getElementById("mensaje").innerText = "Texto cambiado!";
-            }
-        </script>
+        <!-- Conecta el archivo externo -->
+        <script src="index.js"></script>
     </body>
 </html>
