--- a/cap-01/src/index.html
+++ b/cap-01/src/index.html
@@ -8,6 +8,6 @@
         <button onclick="cambiarTexto()">Haz clic</button>
 
         <!-- Conecta el archivo externo -->
-        <script src="index.js"></script>
+        <script src="assets/index.js"></script>
     </body>
 </html>
