--- a/cap-02/src/index.html
+++ b/cap-02/src/index.html
@@ -6,7 +6,7 @@
     <title>
         Calculadora de Descuento
     </title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="assents/index.css">
 </head>
 <body>
 
@@ -29,6 +29,6 @@
 
     <div id="resultado"></div>
 
-    <script src="script.js"></script>
+    <script src="assets/index.js"></script>
 </body>
 </html>
